# tbilliards

./: README.md  iter.md  tauri-billiards-wrapper-spec.md
.github/workflows/: build.yml
snap/: snapcraft.yaml
snap/gui/: billiards.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/templates/: billiards.desktop
