[package]
name = "billiards"
version = "0.1.0"
description = "Desktop wrapper for the billiards web game"
authors = ["tailuge"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "billiards_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["image-png"] }
tauri-plugin-window-state = "2"

[profile.release]
opt-level = "z"       # Optimize for binary size
lto = true            # Enable Link-Time Optimization
codegen-units = 1     # Reduce parallel codegen units to maximize LTO optimization
panic = "abort"       # Remove panic unwinding overhead
strip = true          # Strip symbols and debug info automatically
